--- a/index.html
+++ b/index.html
@@ -482,11 +482,11 @@
                 <button id="connectWalletBtn" class="action-btn">CONNECT NEURAL NETWORK</button>
                 <p id="walletAddress">Network Status: Disconnected</p>
                 <div id="trainerLevel" class="level-badge">Level 0: Neural Node Inactive</div>
-                <p id="tokenInfo" class="token-info">Required Processing Power: 10,000 $ZhenZhen per operation</p>
+                <p id="tokenInfo" class="token-info">Required Processing Power: 10,000 $RabbitAI per operation</p>
             </div>
             <div class="terminal-info">
             ZhenZhen Experiment 001<br>
-            Use $ZhenZhen tokens to train ZhenZhen<br>
+            Use $RabbitAI tokens to train ZhenZhen<br>
             If any bar reaches 0 after 24 hours & ZhenZhen's experiment is over but coin remains active.<br>
             Each Interaction extends the progress for 15minutes
         </div>
