--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
     <div class="simulation-buttons" style="margin-top: 10px;">
         <a href="https://x.com/ZhenZhenFun" target="_blank" class="action-btn social-btn">TWITTER</a>
         <a href="https://t.me/" target="_blank" class="action-btn social-btn">TELEGRAM</a>
-        <a href="https://pump.fun" target="_blank" class="action-btn social-btn">PUMP.FUN</a>
+        <a href="https://pump.fun/coin/6QZc9CRDjdGeZQ792KCHpqg51YUzNiQRhYDobaaspump" target="_blank" class="action-btn social-btn">PUMP.FUN</a>
     </div>
           </div>
 
